[package]
name = "Vorto"
version = "1.0.0" # This is the launcher version
edition = "2021"

# Automatically pulls down files, extracts them, and overrides binaries without admin privileges
[dependencies]
bevy = "0.14" 
bevy_egui = "0.28" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6" 
dirs-next = "2.0"
chrono = "0.4" # <--- Add this line here to handle real-world dates!

[[bin]]
name = "vorto_launcher"
path = "src/launcher.rs"

[[bin]]
name = "vorto_engine"
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }